# WEAVESS

./: CMakeLists.txt  CMakeUserPresets.json  README.md  generate_fanng_scripts.py  generate_mem_scripts.py  generate_mem_scripts_2.py  remaining_fanng_scripts_1.txt  remaining_scripts.txt  siftresult.txt
Bulk-graph-scripts-1/: hnsw-1.sh  hnsw-2.sh  hnsw-3.sh  hnsw-4.sh  hnsw-5.sh  vamana-1.sh  vamana-2.sh  vamana-3.sh
HCNNG logs/: experiment_results.csv  nytimes.txt
dpg_graphs/: README.md
efanna logs/: Makefile  audio.txt  deep.txt  enron.txt  gist1m.txt  glove.txt  imageNet.txt  lastfm.txt  millionSong.txt  nytimes.txt  ukbench.txt  uqv.txt
hnsw_logs/: MNIST1.txt  MNIST2.txt  MNIST3.txt  MNIST4.txt  MNIST5.txt  astro1m1.txt  astro1m3.txt  astro1m4.txt  audio4.txt  audio5.txt  bigann1.txt  bigann2.txt  bigann5.txt  cifar3.txt  cifar4.txt  crawl1.txt  crawl2.txt  crawl4.txt  deep1.txt  deep2.txt  deep3.txt  deep4.txt  deep5.txt  enron1.txt  enron5.txt  gist1.txt  gist2.txt  gist3.txt  gist4.txt  gist5.txt  glove1.txt  glove2.txt  glove5.txt  imageNet1.txt  imageNet2.txt  imageNet3.txt  imageNet4.txt  imageNet5.txt  lastfm1.txt  lastfm2.txt  (+67 more)
logs/: cifar.txt  deep.txt  gist1m.txt  glove.txt
new_dpg_logs/: MNIST0.txt  MNIST20.txt  MNIST21.txt  MNIST22.txt  astro1m20.txt  astro1m21.txt  astro1m23.txt  astro1m25.txt  audio21.txt  audio22.txt  audio23.txt  audio24.txt  audio25.txt  audio4.txt  audio6.txt  bigann1.txt  bigann20.txt  bigann22.txt  bigann23.txt  bigann24.txt  cifar2.txt  cifar20.txt  cifar21.txt  cifar22.txt  cifar23.txt  cifar24.txt  cifar6.txt  crawl1.txt  crawl2.txt  crawl20.txt  crawl21.txt  crawl24.txt  deep0.txt  deep1.txt  deep10.txt  deep11.txt  deep12.txt  deep13.txt  deep14.txt  deep15.txt  (+226 more)
new_efanna_logs/: MNIST3.txt  MNIST4.txt  algo_test.txt  astro1m.txt  astro1m1.txt  astro1m11.txt  astro1m12.txt  astro1m2.txt  astro1m3.txt  audio1.txt  audio11.txt  audio3.txt  bigann.txt  bigann1.txt  bigann11.txt  bigann12.txt  bigann2.txt  cifar11.txt  cifar12.txt  crawl2.txt  crawl3.txt  deep0.txt  deep1.txt  deep10.txt  deep11.txt  deep12.txt  deep13.txt  deep2.txt  deep3.txt  deep4.txt  deep5.txt  deep6.txt  deep7.txt  deep8.txt  deep9.txt  gist1.txt  gist11.txt  gist2.txt  glove12.txt  glove2.txt  (+105 more)
nsg_logs/: deep0.txt  imageNet0.txt  sift0.txt  ukbench0.txt  uqv0.txt
nssg_logs/: deep0.txt  imageNet0.txt  sift0.txt  ukbench0.txt  uqv0.txt
original_efanna_logs/: astro1m1.txt  audio0.txt  audio10.txt  audio11.txt  audio12.txt  audio2.txt  audio6.txt  audio7.txt  audio8.txt  bigann1.txt  cifar1.txt  crawl1.txt  deep0.txt  deep1.txt  deep10.txt  deep11.txt  deep12.txt  deep2.txt  deep3.txt  deep4.txt  deep5.txt  deep6.txt  deep7.txt  deep8.txt  deep9.txt  enron1.txt  imageNet0.txt  imageNet1.txt  imageNet10.txt  imageNet2.txt  (+67 more)
test/: CMakeLists.txt  algo_test.cpp  algo_test_dpg.cpp  algo_test_efanna.cpp  algo_test_fanng.cpp  algo_test_hnsw.cpp  algo_test_nsg.cpp  algo_test_nssg.cpp  algo_test_onng.cpp  algo_test_vamana.cpp
(+391 files in other folders)
